Fix (ED-50): navbar icon out of bounds (#51)

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -275,7 +275,6 @@ ul.task-list input[type="checkbox"] {
 
   .navbar-brand {
     color: var(--global-text-color);
-    margin-left: -20px;
   }
 
   .navbar-nav .nav-item .nav-link {
